Try-except exercise solved

--- a/lessons/python_intro/python_review_and_best_practices.ipynb
+++ b/lessons/python_intro/python_review_and_best_practices.ipynb
@@ -1499,13 +1499,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here. \n",
+    "def to_int(x):
+	try: 
+		print(int(x))
+	except: 
+		print("NOT A NUMBER")",
     "\n",
     "\n",
     "\n",
     "# Test cases:\n",
-    "# your_function_name(\"Steve\") -> \"NOT A NUMBER\"\n",
-    "# your_function_name(5.41) -> 5"
+    "to_int(\"Steve\") -> \"NOT A NUMBER\"\n",
+    "to_int(5.41) -> 5"
    ]
   },
   {
