markdown bug fixed2

--- a/lessons/python_intro/python_review_and_best_practices.ipynb
+++ b/lessons/python_intro/python_review_and_best_practices.ipynb
@@ -1499,11 +1499,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def to_int(x):
-	try: 
-		print(int(x))
-	except: 
-		print(\"NOT A NUMBER\")",
+    "def to_int(x):",
+	"	try: ",
+	"	print(int(x))",
+"	except: ",
+	"	print(\"NOT A NUMBER\")",
     "\n",
     "\n",
     "\n",
